dvlcube logo and new insults

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,8 +5,8 @@
   <%- include ("../components/header.ejs") %>
 </head>
 
-<body>
-  yo
+<body class="white">
+  <img src="/img/dvlcube.jpg">
 </body>
 
 </html>
