--- a/public/css/main.css
+++ b/public/css/main.css
@@ -47,3 +47,35 @@ body {
 .white {
   background-color: white;
 }
+
+.relative-fonts {
+  font-size:2.2vw;
+}
+
+/*  fontSize: */
+.xs   {font-size: 0.75rem}
+.sm   {font-size: 0.875rem}
+.base {font-size: 1rem}
+.lg   {font-size: 1.125rem}
+.xl   {font-size: 1.25rem}
+.xl2  {font-size: 1.5rem}
+.xl3  {font-size: 1.875rem}
+.xl4  {font-size: 2.25rem}
+.xl5  {font-size: 3rem}
+.xl6  {font-size: 4rem}
+.fs1  {font-size: 1vw}
+.fs2  {font-size: 1.4vw}
+.fs3  {font-size: 1.6vw}
+.fs4  {font-size: 1.8vw}
+.fs5  {font-size: 2vw}
+.fs6  {font-size: 2.2vw}
+.fs7  {font-size: 2.4vw}
+.fs8  {font-size: 2.6vw}
+
+.bold {
+  font-weight: bold;
+}
+
+table.striped>tbody>tr:nth-child(odd) {
+  background-color: rgb(86 86 86 / 50%);
+}
