--- a/views/pages/pops/index.ejs
+++ b/views/pages/pops/index.ejs
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 
 <head>
+  <title>dvlcube hub</title>
   <%- include ("../../components/header.ejs") %>
 </head>
 
